--- a/src/Style/Player.scss
+++ b/src/Style/Player.scss
@@ -30,6 +30,8 @@
     cursor: pointer;
   }
 }
+
+// 圖表
 .chartWarp {
   .chart {
     padding: 1.5rem;
@@ -42,3 +44,5 @@
     width: 500px;
   }
 }
+
+// 細節頁
