--- a/src/Style/Player.scss
+++ b/src/Style/Player.scss
@@ -34,14 +34,57 @@
 // 圖表
 .chartWarp {
   .chart {
-    padding: 1.5rem;
+    padding: 1rem;
     .closeBtn {
       cursor: pointer;
     }
   }
   canvas {
-    height: 500px;
-    width: 500px;
+    height: 300px;
+    width: 300px;
+  }
+}
+.playerDetailBg {
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1200;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .playerDetailPop {
+    border-radius: 12px;
+    background-color: white;
+    max-width: 80%;
+    height: 85%;
+    display: flex;
+    padding: 2rem;
+    .closeBtn {
+      cursor: pointer;
+
+      &:hover {
+        color: rgb(63, 81, 181);
+      }
+    }
+    .chart {
+      display: flex;
+      align-items: center;
+      min-width: 450px;
+      margin-right: 2rem;
+    }
+    .infoWrap {
+      min-width: 200px;
+      border-left: 1px solid rgba(0, 0, 139, 0.5);
+      padding-left: 1.5rem;
+      display: flex;
+
+      .item {
+        margin-bottom: 0.3rem;
+      }
+    }
   }
 }
 
