--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -2,10 +2,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* border: 1px solid grey; */
+  border: 1px solid grey;
   font-family: "Poppins";
   list-style: none;
 }
 :root {
   --mainBlue: #43affc;
+}
+.Page {
+  height: 100vh;
+  padding-top: 80px;
 }
